--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <link rel="icon" type="image/x-icon" href="../carcode.png">
+  <link rel="icon" href="../carcode.png" type="image/png">
   <meta name="description" content="CARCODE - Professional Car Coding Services" />
   <title>CARCODE - Professional Car Coding</title>
 </head>
